# numproxx

./: .gitignore  CHANGELOG.md  numproxx.cabal
src/: Main.hs  Numeric.hs
src/NumProxx/: Numeric.hs
