cabal-version:   3.12
name:            numproxx
version:         0.1.0.0
license:         NONE
author:          Vasilii Nikonov
maintainer:      nikonov.va@yandex.ru
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable numproxx
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
